--- a/app/views/parts/_mainnav.html.erb
+++ b/app/views/parts/_mainnav.html.erb
@@ -9,6 +9,8 @@
     </div>
 
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "add org", organizations_path %></li>
+
 <% if user_signed_in? %>
         
        <li> <%= link_to image_tag("skateboard_glyph.png"), profile_page_path(current_user.id) %> </li> 
