--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -17,7 +17,9 @@
 		<h4><%= @user.job_title %> 
 		at <%= link_to @user.organization.name, organization_path(@user.organization.id) %> </h4>
 		<p> <button type="button" class="btn btn-primary btn-xs">message</button>
-		  <button type="button" class="btn btn-primary btn-xs">+ follow</button> </p>
+			<%= link_to "follow", follow_user_path(@user.id) %>
+		 <!-- <button type="button" class="btn btn-primary btn-xs">+ follow</button> -->
+		</p>
   	  </div>
  	</div><!-- end panel-body -->
 
