basic user following functions (follow, unfollow, display on profile) now  work; follow tests failing/ incomplete; moved profile components into partials; models still need some refactoring; added state and factory girl gems; created some mailers but didn't implement

--- a/app/views/follow_users/new.html.erb
+++ b/app/views/follow_users/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "/parts/mainnav" %>
 Testing page... if nothing displays below then there's no @followed getting passed </br></br>
 
 <% if @followed %> 
