--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -62,6 +62,8 @@ ______follow</br></br>
 ___design pages </br>
 ___add profile pictures </br>
 ___javascript events </br>
+http://www.localytics.com/blog/2014/a-year-on-angular-on-rails-a-retrospective/</br>
+http://www.cerebris.com/blog/2012/01/24/beginning-ember-js-on-rails-part-1/</br>
 .........notification behaviors </br>
 .........behavior on profile pages: </br></br>
 
@@ -72,6 +74,7 @@ ____New programs, new user </br>
 ____Update organization, new user </br>
 ____Update programs, new user </br>
 ____Quick, associations, new user </br></br>
+____ STATE MACHINE for user types???</br></br>
 
 + Searching and basic mapping behaviors </br>
 ____Geokit gem </br>
@@ -152,6 +155,8 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 + Independent user </br></br>
 
 + Directions and other planning tools </br></br>
+
++ Secure headers gem? https://github.com/twitter/secureheaders </br></br>
 </p> </br></br>
 </div>
 
@@ -171,7 +176,101 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 <del> 3) set up controller </del> </br>
 4) create interface </br>
 5) desplay followers in the profile </br>
-==============</br>
+==============</br></br>
+
+=======STATE MACHINE===</br>
+https://github.com/pluginaweek/state_machine</br></br>
+State machine for user signup</br>
+1) email confirmation? </br>
+2) user for existing org with other confirmed users </br>
+------ staff </br>
+----------- staff posting on org </br>
+----------- staff not posting on org </br>
+------ volunteer </br>
+----------- volunteer posting on org </br>
+----------- volunteer not posting on org </br>
+3) user for not existing org? </br>
+4) unassociated user? </br>
+5) organizations associated with a collaboration </br>
+6) organizations associated with a network </br>
+7) BLOCKING: users, organizations, collaborations, networks </br>
+8) USER PRIVACY SETTINGS: (PRIVATE1, PRIVATE2, PRIVATE3) hide user name/ picture for senative jobs -- only available to certain other users </br>
+9) SECRET LOCATION SETTINGS?? </br>
+8) REPORTING/FLAGGING: users, organizations, collaborations, networks </br>
+How does user and organizatoin state affect search results??? </br></br>
++++++++++++++++++++++++++</br>
+STATE MACHINE IMPLEMENTATION
+1) Define state in class (i.e. in the model) </br>
+state_machine :state, initial: :pending do  </br></br>
+
+2) Define method for doing something based on state: like "send_request_email" (still in the model)</br>
+def send_request_email </br>
+end </br></br>
+
+3) In this case you generate the mailer in the terminal: bin/rails generate mailer user_notifier </br></br>
+
+4) Set up the mailer:</br>
+def friend_requested
+user_friendship = UserFriendship.find(user_friendship_id) </br>
+@user = user_friendship.user </br>
+@friend = user.friendship.friend </br>
+mail to: @friend.email, </br>
+....subject: "#{@user.first_name} wants to be your friend on Treebook"</br>
+end</br></br>
+
+4) Create view: call it the same name as the method we created... so in this case "send_request_email"</br>
+
+*in this example: generate a mailer: bin/rails generate mailer user_notifier </br>
+for Mandrill integration: http://help.mandrill.com/entries/21738467-using-mandrill-s-smtp-integration-with-web-frameworks </br>
+helps: https://stackoverflow.com/questions/18297248/sending-mail-with-actionmailer-and-outlook-mandrillapp-smtp-server </br>
+help for HEROKU deployment: https://jibai31.wordpress.com/2014/04/18/send-transactional-emails-with-mandrill-in-rails/ </br>
+more helps: http://www.alanverga.com/blog/2014/01/03/custom-rails-mailer-and-mandrill </br></br>
+
+
+5) Hooking up the send request email method (back to the model)</br>
+def send_request_email</br>
+UserNotifier.friend_requested(id).deliver</br>
+end</br>
+
+6) Adding the state declaration (still in the model)</br>
+state_machine :state, initial: :pending do </br>
+	event :accept do </br>
+		transition any => :accepted </br>
+	end </br>
+end </br></br>
+
+7) Adding "send acceptance email" (another medthod in the model, mailer & view)</br>
+# method & state in the model </br>
+tate_machine :state, initial: :pending do </br>
+	after_transition on: :accept, do: :send_acceptance_email</br></br>
+
+	event :accept do </br>
+		transition any => :accepted </br>
+	end </br></br>
+
+def send_acceptance_email</br>
+UserNotifier.friend_request_accepted(id).deliver</br>
+end</br></br>
+
+# [method/action/thing] created in the mailer
+def friend_request_accepted </br>
+user_friendship = UserFriendship.find(user_friendship_id)
+@user = user_friendship.user </br>
+@friend = user.friendship.friend </br>
+mail to: @user.email, 
+....subject: "#{@friend.first_name} accepted your friendship!!" </br>
+end </br> </br>
+
+8) HOLY GEEZ!!! creating a class method (rather than an instance method) and new join table relationships based on state at 9:00 into the video</br>
+instance methods use an instance of a class, whereas a class method can be used with just the class name </br></br> instance methods operate on an object and has access to its instance variables, while a class method operates on a class as a whole and has no access to a particular instance's variables (unless you pass the instance in as a parameter).</br></br>
+http://teamtreehouse.com/library/building-social-features-in-ruby-on-rails-2/adding-state/setting-up-the-state-machine-2 </br></br>
+http://www.railstips.org/blog/archives/2009/05/11/class-and-instance-methods-in-ruby/ </br></br>
+--this gets crazy with creating join table relationships that account for state </br>
+--then they create another follow_user for the followed with a "class method" </br>
+I think I need to do this to 1) display all of the followers of a particular user </br>
+and 2) allow a user to block another user from following them </br>
+
+
 *start going to Ruby Meetup!!!</br>
 *check/ build sign-up validations </br>
 <del> *fix profile pages, and links to profile pages... </del></br>
