--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -20,6 +20,6 @@
 </div> <!--end row search-pad-->
 
 	<div class="row">
-		<%= render "/parts/backlog" %>
+		<%# render "/parts/backlog" %>
 	</div>
 </div>
