--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -157,6 +157,8 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 + Directions and other planning tools </br></br>
 
 + Secure headers gem? https://github.com/twitter/secureheaders </br></br>
+
++++ CONCEPT: QUICKBOOKS APP FOR BUSINESS PLANNING, integrate development planning & grant writing apps with Cohoot </br></br>
 </p> </br></br>
 </div>
 
