mocked up the program page, added a program activities model, removed duplicae application view

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -7,7 +7,10 @@
     <%= f.input :loc_city %>
     <%= f.input :loc_state %>
     <%= f.input :loc_zip %>
-    <%= f.input :organization_id, collection: Organization.all, label_method: :name %>
+    <%= f.input :organization_id,
+                as: :hidden,
+                value: 'Organization.where("id" => current_user.organization)' 
+    %>             
   </div>
 
   <div class="form-actions">
