--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -39,6 +39,8 @@ ___Posts</br>
 ___Messages?</br>
 ___Blogs?</br>
 ___Events/Calendar?</br>
+___JotGit for realtime document editing in collaborations? </br>
+__________https://github.com/jdleesmiller/jotgit </br>
 ___Capacity/ Openings?</br></br>
 
 ****** Core workflow </br>
@@ -65,6 +67,7 @@ ___javascript events </br>
 http://www.localytics.com/blog/2014/a-year-on-angular-on-rails-a-retrospective/</br>
 http://www.cerebris.com/blog/2012/01/24/beginning-ember-js-on-rails-part-1/</br>
 .........notification behaviors </br>
+___transparent blur css: http://css-tricks.com/blurry-transparent-header-effect-ios7-css/ </br>
 .........behavior on profile pages: </br></br>
 
 + Sign-up flows/ behaviors </br>
@@ -158,7 +161,7 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 
 + Secure headers gem? https://github.com/twitter/secureheaders </br></br>
 
-+++ CONCEPT: QUICKBOOKS APP FOR BUSINESS PLANNING, integrate development planning & grant writing apps with Cohoot </br></br>
++++ CONCEPT: QUICKBOOKS APP FOR BUSINESS PLANNING, integrate development planning & grant writing apps with Cohoot -- can charge ~ $50/mo for quickbooks app </br></br>
 </p> </br></br>
 </div>
 
