--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -46,3 +46,13 @@
   padding-right: 0;
   padding-left: 0;
 }
+
+.trans-overlay {
+  height: 537px;	
+  margin-left: -15px;
+  margin-bottom: 0px;
+  background-color: rgba(255,255,255,0.85); 
+  border: 0px solid transparent;
+  border-radius: 0px;
+       
+}
