--- a/app/views/parts/_org_feed.html.erb
+++ b/app/views/parts/_org_feed.html.erb
@@ -8,12 +8,20 @@
 
  <% if @campaigns %>
   <% @campaigns.each do |campaign| %>
-	<div class="well">
-	  <%= campaign.content %> </br>
-	  <%= link_to time_ago_in_words(campaign.created_at), campaign_path(campaign) %> ago,
-	  by <%= campaign.user.full_name %>
-	</div>	
-<% end %>	
+	  <% if user_signed_in? %>
+		<div class="well">
+		  <%= campaign.content %> </br>
+		  by <%= link_to campaign.user.full_name, profile_page_path(campaign.user) %>, 
+		  <%= time_ago_in_words(campaign.created_at) %> ago
+		</div>	
+	  <% else %>
+	    <div class="well">
+	  	  <%= campaign.content %> </br>
+		  by <%= link_to campaign.user.organization.name, organization_path(campaign.user.organization) %>, 
+		  <%= time_ago_in_words(campaign.created_at) %> ago
+		</div>  
+	  <% end %>	
+  <% end %>	
 <% end %>	
 
 
