--- a/app/views/profiles/_loop.html.erb
+++ b/app/views/profiles/_loop.html.erb
@@ -7,8 +7,8 @@
 		  <% @campaigns.each do |campaign| %>
 			<div class="well">
 			  <%= campaign.content %> </br>
-			  <%= link_to time_ago_in_words(campaign.created_at), campaign_path(campaign) %> ago,
-			  by <%= campaign.user.full_name %>
+			  by <%= link_to campaign.user.full_name, profile_page_path(campaign.user) %>, 
+			  <%= time_ago_in_words(campaign.created_at) %> ago
 			</div>	
 		  <% end %>	
 
