should have committed these changes earlier--started adding state to the staffs model, redirected new users to a page asking them to accociate with an organization, added mailers that don't seem to be working yet, and added some tests.  Mailer and controller tests not fixed yet.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,12 @@
     <%= f.input_field :email, placeholder: 'email', :required => true %> </br>	
     <%= f.input_field :password, placeholder: 'password', :required => true %> </br>	  
     <%= f.input_field :password_confirmation, placeholder: 'confirm password', :required => true %> </br>
+    <%# f.input :terms_of_service, 
+    				as: :boolean,
+    				label: ("I accept the #{link_to 'Terms of Service', root_path}.").html_safe,
+    				label_html: {}
+     %></br>
+
     <%= f.button :submit, 'Sign up', :class => "btn btn-primary btn-lg" %>
 	<% end %>
 
