--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <%= yield %>
 <% if flash[:notice] %>
     <div class="alert">
-      <%= flash[:notice] %>
+      <%# flash[:notice] %>
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
     </div>
   <% end %>
