--- a/app/views/profiles/_expertise.html.erb
+++ b/app/views/profiles/_expertise.html.erb
@@ -1,3 +1,7 @@
 <div class="panel-body">
  		<h4>Expertise</h4>
+ 		  <div class="btn btn-primary btn-xs">Community-based action</div>
+      <div class="btn btn-primary btn-xs">Education</div>
+      <div class="btn btn-primary btn-xs">Activism</div>
+      <div class="btn btn-primary btn-xs">Public policy</div>
  	</div>
