--- a/app/views/staffs/new.html.erb
+++ b/app/views/staffs/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "/parts/mainnav" %>
+<%# render "/parts/mainnav" %>
 
 
 <div class="container-fluid">
@@ -17,7 +17,9 @@
 		  <%= f.button :submit, "Connect" %>
 		<% end %>
 	</br>
+	<h4>
 		 <%= link_to "Not right now, just take me to the search!", search_path %>
+	</h4>	 
 	</div>	
 </div>
 
