--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -27,11 +27,9 @@ _______follow</br></br>
 
 ****** How do we handle these tools? What are the problems & goals? </br>
 ___Collaborations</br>
-_______join & follow</br>
-_______Tags?</br>
+_______use an api & make it a separate application?
 ___Networks</br>
-_______join & follow</br>
-_______Tags?</br></br>
+_______user an api & make it a sparate application?
 
 ****** Content posting </br>
 ___Campaigns</br>
@@ -73,6 +71,9 @@ ___transparent blur css: http://css-tricks.com/blurry-transparent-header-effect-
 + Sign-up flows/ behaviors </br>
 ____Quick, new user </br>
 ____New organization, new user </br>
+________add validations to the new user join organization page so only new users can do this </br>
+________fix mailers, confirmation, and state </br>
+________fix the url so that it reads /connect </br>
 ____New programs, new user </br>
 ____Update organization, new user </br>
 ____Update programs, new user </br>
@@ -173,17 +174,26 @@ http://www.reddit.com/r/elasticsearch/comments/1xvif2/knowledge_level_required_f
 
 </br>
 <strong>Current backlog goals</strong></br>
-****GET HELP TO FIX TESTS!!!!</br>
 ===============</br></br>
 TO INITIAL WORKING PROTOTYPE:</br>
-** active record basics... </br>
+** fix programs </br>
+****** Ok, basically the form is no longer setting the organization_id... </br>
+****** We're having some model association issues with the new join table? </br>
+** add join table for users and programs with state to cover cases for: </br>
+***** @program.team, @program.primary_contact, @program.enrollment_contact, @program.pe_contact, @program.admin, @program.team_and_admin </br>
+***** add a join table for locations and programs (with state for primary loc?): </br>
+***** needs to then determine user's location (through helper? in a model?) </br>
+** create settings views and controllers for user, program, organization to handle all this logic </br>
+** destroy followeds </br>
+** add test factories (optional) </br>
+** finish state for confirming staff </br>
+** destroy staff relationsihps </br>
 ** display followed campaigns in loop</br>
-** add experience tags</br>
+** add experience and focus tags</br>
 ** add a background field</br>
 ** add profile pictures</br>
-** fix up programs </br>
+** add geolocation </br>
 ** add the search system</br>
-** add the mapping system</br>
 </br>
 ===============</br>
 **complete intermediate ruby section</br>
