--- a/app/views/profiles/_collaborations.html.erb
+++ b/app/views/profiles/_collaborations.html.erb
@@ -1,3 +1,3 @@
 <div class="panel-body">
- 		<h4><%= @user.organization.name %>'s Collaborations</h4>
+ 		<h4><%= @user.staff.organization.name %>'s Collaborations</h4>
  	</div>	
