--- a/app/views/profiles/_name_head.html.erb
+++ b/app/views/profiles/_name_head.html.erb
@@ -18,7 +18,7 @@
   	  <div class="col-md-9 col-md-offset-1">  
 		<h1><%= @user.full_name %> </h1>	
 		<h4><%= @user.job_title %> 
-		at <%# link_to @user.organization.name, organization_path(@user.organization.id) %> </h4>
+		at <%= link_to @user.staff.organization.name, organization_path(@user.staff.organization.id) %> </h4>
 		<p> 
 		
 		</p>
