--- a/app/views/programs/new.html.erb
+++ b/app/views/programs/new.html.erb
@@ -1,6 +1,13 @@
 <%= render "/parts/mainnav" %>
-<h1>New program</h1>
 
-<%= render 'form' %>
+<div class="container-fluid">
+	<div class="row"> 
+   <div class="col-md-4 col-md-offset-1">
 
-<%= link_to 'Back', programs_path %>
+			<h1>New program</h1>
+			<%= render 'form' %>
+			<%= link_to 'Back', programs_path %>
+
+		</div>
+	</div>
+</div>			
