Fixed-up the program page
The program page is still ugly and still a demo piece but it displays
the right information now.

About to fix the program table, and then finish the join table for
organizations and programs. Then I’ll integrate elasticsearch.

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -48,11 +48,43 @@
 }
 
 .trans-overlay {
-  height: 537px;	
-  margin-left: -15px;
-  margin-bottom: 0px;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 25px;
   background-color: rgba(255,255,255,0.85); 
   border: 0px solid transparent;
   border-radius: 0px;
        
+}
+
+.fixed-overlay {
+  min-height: 275px;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 25px;
+  background-color: rgba(255,255,255,0.85); 
+  border: 0px solid transparent;
+  border-radius: 0px;
+}
+
+.light-backgrouund {
+  background-color: #A9E2F3;
+}
+
+.program-map-box {
+  min-height: 500px;
+}
+
+.program-info {
+  margin-top: 15px;
 }
