--- a/app/views/parts/_backlog.html.erb
+++ b/app/views/parts/_backlog.html.erb
@@ -69,6 +69,7 @@ ___transparent blur css: http://css-tricks.com/blurry-transparent-header-effect-
 .........behavior on profile pages: </br></br>
 
 + Sign-up flows/ behaviors </br>
+____Concept: http://notebook.ideapublic.org/2014/one-less-password/ </br>
 ____Quick, new user </br>
 ____New organization, new user </br>
 ________add validations to the new user join organization page so only new users can do this </br>
