Fixed relationship between program & organization
Fixed a small bug—need to fix the interface to save all the necessary
program details on which to build the search algorithm.

--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -15,7 +15,7 @@
 	  		<br><br><br>
   			<h1><%= @program.prog_name %> <br> 
   				<small> 
-  					at Change the World
+  					<%= @organization.name %>
   				</small>
   			</h1> </br>
   </div>
