--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -6,22 +6,31 @@
     <%= simple_form_for(@program) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
-        <%= f.input :prog_name %>
-        <%= f.input :prog_obj %>
-        <%= f.input :ideal_candidate %>
-        <%= f.input :initial_condition %>
-        <%= f.input :goal_condition %>
-        <%= f.input :next_step %>
-        <%= f.input :program_capacity %>
+     
+     
+          <%= f.input :prog_name, label: 'The name of your program or service'  %>
+          <%# f.input :hrs_mon_s %>
+          <%# f.input :hrs_mon_e %>
+          <%# f.input :hrs_tues_s %>
+       
+          <%= f.input :ideal_candidate, label: 'Brief description of who this service is for'  %>
+          <%= f.input :goal_condition, label: 'Brief description of what this program or service does' %>
+    
+          <%= f.input :organization_id, 
+            	input_html: { value: '@organization.id' }, 
+            	wrapper_html: { class: 'hidden' } %>
+         
+    
+    </div>
 
-        <!--insecure-->
-        <%= f.input :organization_id, 
-        	input_html: { value: '@organization.id' }, 
-        	wrapper_html: { class: 'hidden' } %>
-      </div>
 
+  
+   
       <div class="form-actions">
         <%= f.button :submit %>
-      </div>
+      </div> 
+      
     <% end %>
    
+
+  
