--- a/app/views/programs/new.html.erb
+++ b/app/views/programs/new.html.erb
@@ -2,12 +2,12 @@
 
 <div class="container-fluid">
 	<div class="row"> 
-   <div class="col-md-4 col-md-offset-1">
+		<div class="col-md-6">
 
-			<h1>New program</h1>
+			<h3>New program/ service at <%= @organization.name %> </h3>
 			<%= render 'form' %>
-			<%= link_to 'Back', programs_path %>
+			</br><%= link_to 'Back', programs_path %>
 
-		</div>
+    </div>
 	</div>
 </div>			
